--- a/main.css
+++ b/main.css
@@ -4,36 +4,37 @@
 }
 */
 
-.body{
+
+body{
     font-size:1em;
     margin:0;
-    max-width:720px;
-    min-width:310px;
+    background-color:rgb(104,205,213);  /*部分分辨率底部有留白，只能用这个方法，让body背景色与box背景色一致*/
+
 
 }
 
 .box{
     background-color:rgb(104,205,213);
     width:100%;
-    max-width:1600px;
-    height:100vh;
+    float:left;
+
 }
 .left{
     width:15.5%;
     float:left;
-    height:100vh;
 }
 .back{
     background-image:url(sources/back.png);
     width:3.375em;
     height:3.375em;
-    margin-left:5.5vh;
-    margin-top:3vh;
+    margin-left:2em;
+    margin-top:2em;
 }
 .middle{
     width:69%;
     float:left;
-    height:100vh;
+    padding-bottom:13em;
+
 }
 
 .logo{
@@ -69,16 +70,17 @@
     margin-right:1.2em;
 }
 .tags{
-    margin-top:1em;
     float:left;
     width:100%;
+    margin-top:1em;
 }
 .tag1{
+    float:left;
     font-size:1.5em;
     line-height:1.5em;
     color:#ffffff;
-    float:left;
 }
+
 .tag2{
     font-size:1.5em;
     line-height:1.5em;
@@ -91,5 +93,4 @@
 .right{
     width:15.5%;
     float:left;
-    height:100vh;
 }
